[level 0] Title: 옹알이 (1), Time: 1.31 ms, Memory: 71.9 MB -BaekjoonHub